overflow fix safari

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -26,34 +26,40 @@
 }
 
 * {
-    box-sizing: border-box; 
-    margin: 0; 
-    padding: 0; 
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
 }
 
-body { 
+html {
+    width: 100vw;
+    max-width: 100vw;
+}
+
+body {
     /* colors */
-    --colors-primary-500: #e8712c; 
-    --colors-primary-600: #b65100; 
-    --colors-secondary-500: #ffdd00; 
-    --colors-info-100: #eef6fc; 
+    --colors-primary-500: #e8712c;
+    --colors-primary-600: #b65100;
+    --colors-secondary-500: #ffdd00;
+    --colors-info-100: #eef6fc;
     --colors-info-500: #00a4e5;
     --colors-info-600: #008cc9;
-    --colors-success-100: #f9fff0; 
+    --colors-success-100: #f9fff0;
     --colors-success-500: #80ce00;
     --colors-success-600: #66ad00;
-    --colors-warning-100: #fffdf2;  
-    --colors-warning-500: #ffdd00; 
-    --colors-warning-600: #b89900; 
-    --colors-error-100: #fff2f2; 
-    --colors-error-400: #eb6668; 
-    --colors-error-500: #e33537; 
-    --colors-error-600: #cd1316; 
-    --colors-dim-100: #f7f7f8; 
-    --colors-dim-200: #dbdadd; 
-    --colors-dim-500: #9f9f9f; 
-    --colors-dim-800: #262626; 
-    --colors-black: #000000; 
+    --colors-warning-100: #fffdf2;
+    --colors-warning-500: #ffdd00;
+    --colors-warning-600: #b89900;
+    --colors-error-100: #fff2f2;
+    --colors-error-400: #eb6668;
+    --colors-error-500: #e33537;
+    --colors-error-600: #cd1316;
+    --colors-dim-100: #f7f7f8;
+    --colors-dim-200: #dbdadd;
+    --colors-dim-500: #9f9f9f;
+    --colors-dim-800: #262626;
+    --colors-black: #000000;
     --colors-white: #ffffff;
     --colors-dim-orange: #F0CCB6;
 
@@ -64,76 +70,79 @@ body {
     --heading-font-family: 'Anek';
 
     /* font weights */
-    --font-weight-normal: 400; 
-    --font-weight-semibold: 600; 
+    --font-weight-normal: 400;
+    --font-weight-semibold: 600;
     --font-weight-bold: 700;
 
     /* font sizes */
-    --primary-heading-s: 20px; 
-    --primary-heading-m: 24px; 
-    --primary-heading-l: 36px; 
-    --primary-heading-xl: 48px; 
+    --primary-heading-s: 20px;
+    --primary-heading-m: 24px;
+    --primary-heading-l: 36px;
+    --primary-heading-xl: 48px;
 
     --body-heading-s: 16px;
     --body-heading-m: 18px;
     --body-heading-l: 24px;
     --body-heading-xl: 36px;
 
-    --body-text-xs: 12px; 
-    --body-text-sm: 14px; 
-    --body-text-md: 16px; 
-    --body-text-lg: 18px; 
-    --body-text-xl: 20px;  
+    --body-text-xs: 12px;
+    --body-text-sm: 14px;
+    --body-text-md: 16px;
+    --body-text-lg: 18px;
+    --body-text-xl: 20px;
 
     /* borders */
-    --border-0: 0px; 
+    --border-0: 0px;
     --border-xs: .125rem;
     --border-sm: .25rem;
     --border-md: 1rem;
     --border-lg: 1.5rem;
     --border-full: 9999px;
 
-    /* spacing */ 
-    --px: 1px; 
+    /* spacing */
+    --px: 1px;
     --em: 1em;
-    --spacing-0: 0; 
-    --spacing-05: .125rem; 
-    --spacing-1: .25rem; 
-    --spacing-2: .5rem; 
-    --spacing-3: .75rem; 
-    --spacing-4: 1rem; 
-    --spacing-5: 1.25rem; 
-    --spacing-6: 1.5rem; 
-    --spacing-7: 1.75rem; 
-    --spacing-8: 2rem; 
-    --spacing-9: 2.25rem; 
-    --spacing-10: 2.5rem; 
-    --spacing-11: 2.75rem; 
-    --spacing-12: 3rem; 
-    --spacing-14: 3.5rem; 
-    --spacing-16: 4rem; 
-    --spacing-20: 5rem; 
-    --spacing-24: 6rem; 
-    --spacing-28: 7rem; 
-    --spacing-32: 8rem; 
-    --spacing-36: 9rem; 
-    --spacing-40: 10rem; 
-    --spacing-44: 11rem; 
-    --spacing-48: 12rem; 
-    --spacing-52: 13rem; 
-    --spacing-56: 14rem; 
-    --spacing-60: 15rem; 
-    --spacing-64: 16rem; 
-    --spacing-72: 18rem; 
-    --spacing-80: 20rem; 
-    --spacing-96: 24rem; 
+    --spacing-0: 0;
+    --spacing-05: .125rem;
+    --spacing-1: .25rem;
+    --spacing-2: .5rem;
+    --spacing-3: .75rem;
+    --spacing-4: 1rem;
+    --spacing-5: 1.25rem;
+    --spacing-6: 1.5rem;
+    --spacing-7: 1.75rem;
+    --spacing-8: 2rem;
+    --spacing-9: 2.25rem;
+    --spacing-10: 2.5rem;
+    --spacing-11: 2.75rem;
+    --spacing-12: 3rem;
+    --spacing-14: 3.5rem;
+    --spacing-16: 4rem;
+    --spacing-20: 5rem;
+    --spacing-24: 6rem;
+    --spacing-28: 7rem;
+    --spacing-32: 8rem;
+    --spacing-36: 9rem;
+    --spacing-40: 10rem;
+    --spacing-44: 11rem;
+    --spacing-48: 12rem;
+    --spacing-52: 13rem;
+    --spacing-56: 14rem;
+    --spacing-60: 15rem;
+    --spacing-64: 16rem;
+    --spacing-72: 18rem;
+    --spacing-80: 20rem;
+    --spacing-96: 24rem;
 
     font-family: var(--font-family-regular);
     font-size: var(--body-heading-s);
     overflow-x: hidden;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     font-family: var(--heading-font-family);
 }
 
@@ -161,7 +170,7 @@ p {
 .button {
     background-color: var(--colors-primary-500);
     border: solid;
-    height: var(--spacing-12);    
+    height: var(--spacing-12);
 }
 
 /* forms */
@@ -178,12 +187,14 @@ p {
     outline-color: var(--colors-primary-500);
 }
 
-.text-input:user-invalid { /* bij foutieve input van gebruiker */
+.text-input:user-invalid {
+    /* bij foutieve input van gebruiker */
     background-color: var(--colors-error-100);
     border-color: var(--colors-error-600);
 }
 
-.text-input:user-valid { /* bij juiste input van gebruiker */
+.text-input:user-valid {
+    /* bij juiste input van gebruiker */
     background-color: var(--colors-success-100);
     border-color: var(--colors-success-500);
 }
@@ -202,11 +213,11 @@ p {
     height: var(--spacing-12);
     padding: var(--spacing-0) var(--spacing-4);
     border: var(--colors-primary-500) solid 2px;
-    border-radius: var(--border-sm) var(--border-sm) var(--border-sm) var(--border-0 );
+    border-radius: var(--border-sm) var(--border-sm) var(--border-sm) var(--border-0);
     font-weight: var(--font-weight-semibold);
     font-size: var(--body-text-md);
-    transition: .2s; 
-    cursor: pointer; 
+    transition: .2s;
+    cursor: pointer;
 }
 
 .primary-button {
@@ -221,7 +232,7 @@ p {
 
 .secondary-button {
     background-color: var(--colors-white);
-    color: var(--colors-black);    
+    color: var(--colors-black);
 }
 
 .secondary-button:hover {
@@ -229,20 +240,23 @@ p {
     border-color: var(--colors-primary-600);
 }
 
-:focus { /* wanneer er op een element gefocust wordt, voeg outline toe */
+:focus {
+    /* wanneer er op een element gefocust wordt, voeg outline toe */
     outline-color: var(--colors-black);
 }
 
-.skip-link { /* verplaats skip link uit de viewport, naar links */
+.skip-link {
+    /* verplaats skip link uit de viewport, naar links */
     position: absolute;
     top: 5rem;
     left: -1000px;
     z-index: 99;
     /* Flex parent */
-    display: flex; 
+    display: flex;
     align-items: center;
 
-    &:focus { /* wanneer de skip link focus krijgt (altijd eerste tab door gebruiker) verander de positioning (binnen de viewport) */
+    &:focus {
+        /* wanneer de skip link focus krijgt (altijd eerste tab door gebruiker) verander de positioning (binnen de viewport) */
         top: 5rem;
         left: 2rem;
     }
